Fix svg crop on Firefox.

--- a/app/assets/stylesheets/components/_figure.scss
+++ b/app/assets/stylesheets/components/_figure.scss
@@ -41,5 +41,6 @@
   margin-right: 2px;
   position: relative;
   top: 1px;
+  overflow: visible;
 }
 
